--- a/frontend/css/podesavanja-template.css
+++ b/frontend/css/podesavanja-template.css
@@ -39,7 +39,7 @@ body{
 
 @media screen and (min-width: 992px) {
     .submenu{
-        height: 90vh;
+        height: auto;
     }
 
     .sub-link{
