--- a/ci/css/kontakt.css
+++ b/ci/css/kontakt.css
@@ -15,6 +15,11 @@ body{
     border-radius: 15px;
 }
 
+.onama-form{
+    border: 1px solid #aaa;
+    border-radius: 15px;
+}
+
 .mail-kontakt-border{
     border-left: 1px solid #aaa;
     border-radius: 1px;
