--- a/ci/css/np.css
+++ b/ci/css/np.css
@@ -6,15 +6,13 @@ body{
     text-align: center;
     font-weight: bolder;
     font-size: 35px;
-    padding-top: 30px;
-    padding-bottom: 50px;
+    padding-bottom: 2%;
 }
 
 .nadji{
     text-align: center;
     letter-spacing: 2px;
-    padding-top: 20px;
-    padding-bottom: 100px;
+    padding-top: 2%;
 }
 
 .nadji a {
@@ -28,6 +26,6 @@ body{
 }
 
 #np-content{
-    padding-top: 5%;
+    padding-top: 2%;
 }
 
