--- a/ci/css/rezultatPretrage.css
+++ b/ci/css/rezultatPretrage.css
@@ -15,3 +15,17 @@
 .rez-uo{
 	margin-bottom: 20px;
 }
+
+.a{
+    color: black !important;
+    color: black;
+    text-decoration: none;
+}
+.a:hover {
+    text-decoration: none;
+}
+
+.rez-form{
+    border: 1px solid #aaa;
+    border-radius: 15px;
+}
