Rezultati pretrage fix I

--- a/ci/css/rezultatPretrage.css
+++ b/ci/css/rezultatPretrage.css
@@ -29,3 +29,10 @@
     border: 1px solid #aaa;
     border-radius: 15px;
 }
+
+.tag{
+	border-radius: 15px;
+	border:1px solid white;
+	color:white;
+	line-height: inherit;
+}
