--- a/ci/css/galerija.css
+++ b/ci/css/galerija.css
@@ -22,12 +22,12 @@
     border: 5px solid white;
 }
 
-.slicica{
+.g-slika{
     cursor: pointer;
     border: 3px solid #888;
 }
 
-.slicica:hover {
+.g-slika:hover {
     border: 3px solid white;
 }
 
