--- a/ci/css/galerija.css
+++ b/ci/css/galerija.css
@@ -17,18 +17,23 @@
     bottom:0;
 }
 
+
 .glavna-slika{
     position: fixed;
     border: 5px solid white;
 }
 
+.g-selected{
+    border: 3px solid white !important; 
+}
+
 .g-slika{
     cursor: pointer;
-    border: 3px solid #888;
+    border: 3px solid rgba(0,0,0,0);
 }
 
 .g-slika:hover {
-    border: 3px solid white;
+   
 }
 
 #strelica-levo, #strelica-desno {
