--- a/ci/css/stranica-lokala.css
+++ b/ci/css/stranica-lokala.css
@@ -13,4 +13,9 @@
 .uo-slika{
     border: 3px solid rgba(0,0,0,0);
     display:none;
+    cursor: pointer;
+}
+
+img.d-block.w-100{
+    cursor: pointer;
 }
